# copilot-harness-v2

./: .gitignore  README.md  pyproject.toml
harness_v2/: __init__.py  artifacts.py  cli.py  config.py  events.py  gates.py  installer.py  memory.py  state.py  v3_parser.py  v3_schema.py
tests/: __init__.py  test_core.py
